# pyconkr2024-fastapi-with-pdi

./: .gitignore  README.md  pyproject.toml
example/: 1-1.py  1-2.py  1-3.py  1-4.py
with_pdi/: application.py  container.py  repository.py  router.py  service.py  test_service.py
without_pdi/: application.py  config.json  dependency.py  redis_singleton.py  repository.py  router.py  router_without_di.py  service.py  setting_singleton.py  test_repository.py  test_service.py  test_service_without_di.py
