[tool.poetry]
name = "pycon-sample"
version = "0.1.0"
description = ""
authors = ["한바름 <rumbarum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.8"
fastapi = "^0.112.2"
dependency-injector = "^4.41.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
